Convert rem/em to pixels, add scroll-to-top, fix footer, update z-index, add hyperlinks to footer, news page start dev

--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,27 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 24px;
   font-weight: 400;
 
-  color: #213547; 
-  background-color: #ffffff; 
+  color: #213547;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  scroll-behavior: smooth;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
 a:hover {
   color: #535bf2;
@@ -27,20 +33,20 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 51px;
+  line-height: 56px;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 10px 19px;
+  font-size: 16px;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 250ms;
 }
 button:hover {
   border-color: #646cff;
@@ -51,7 +57,7 @@ button:focus-visible {
 }
 
 .card {
-  padding: 2em;
+  padding: 32px;
 }
 
 #app {
